--- a/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
@@ -1,3 +1,129 @@
-<p>
-  purchase-confirm works!
-</p>
+<div class="contents">
+    <h1 class="page-ttl">購入内容確認</h1>
+    <p class="read">
+        <strong class="large-text red-text">まだ購入は完了していません。</strong>
+        <br>ご購入内容をご確認頂き「購入完了」ボタンを押して購入を確定してください。</p>
+
+    <form class="form-layout" method="post">
+        <h2 class="section-ttl">
+            作品情報
+            <div class="right">
+                <div class="button light-gray-button change-button">
+
+                    <a href="http://testssktsportal.azurewebsites.net/theater/aira/">変更</a>
+
+                </div>
+            </div>
+        </h2>
+        <ul class="box radius bg-light-gray mb-large">
+            <li>
+                <dl>
+                    <dt>劇場 / スクリーン</dt>
+                    <dd>シネマサンシャイン１１８ / シアター７</dd>
+                </dl>
+            </li>
+            <li>
+                <dl>
+                    <dt>作品名</dt>
+                    <dd>後妻業の女</dd>
+                </dl>
+            </li>
+            <li>
+                <dl>
+                    <dt>鑑賞日時</dt>
+                    <dd>
+                        <div class="mb-xx-small">
+                            <strong class="red-text">
+                                2018年01月11日(木) 20:15 - 22:28
+                            </strong>
+                        </div>
+                        <p class="small-x-text red-text">※鑑賞日時を必ずご確認ください。</p>
+                    </dd>
+                </dl>
+            </li>
+            <li>
+                <dl>
+                    <dt>座席</dt>
+                    <dd>
+
+                        <p>Ｂ－３ レイト ￥1,300</p>
+
+                        <div style="display: none" class="right">
+                            <div class="button dark-blue-button confirm-button">
+                                <a href="#">確認</a>
+                            </div>
+                            <!--
+                          -->
+                            <div class="button light-gray-button change-button">
+                                <a href="/purchase/seat/11816250020180111702015/">変更</a>
+                            </div>
+                        </div>
+                    </dd>
+                </dl>
+            </li>
+        </ul>
+
+        <h2 class="section-ttl">
+            購入情報
+            <div class="right">
+                <div class="button light-gray-button change-button">
+                    <a href="/purchase/input">変更</a>
+                </div>
+            </div>
+        </h2>
+        <ul class="box radius bg-light-gray mb-large">
+            <li>
+                <dl>
+                    <dt>お名前（ひらがな）</dt>
+                    <dd>てすと てすと</dd>
+                </dl>
+            </li>
+            <li>
+                <dl>
+                    <dt>メールアドレス</dt>
+                    <dd>hataguchi@motionpicture.jp</dd>
+                </dl>
+            </li>
+            <li>
+                <dl>
+                    <dt>電話番号</dt>
+                    <dd>0362778824</dd>
+                </dl>
+            </li>
+
+            <li>
+                <dl>
+                    <dt>カード番号</dt>
+                    <dd>411111*******111</dd>
+                </dl>
+            </li>
+
+        </ul>
+
+        <h2 class="section-ttl">注意事項(重要)</h2>
+        <p class="mb-small">下記項目をご確認いただきチェックを入れて「購入完了」ボタンを押してください。</p>
+        <div class="box radius bg-ultra-light-gray small-x-text notes mb-middle">
+            
+        </div>
+
+        <div class="mb-x-large text-center">
+            <input type="checkbox" name="notesAgree" value="true" id="notesAgree">
+            <label for="notesAgree" class="notes_agree-label">
+                <strong>上記内容に同意する</strong>
+            </label>
+
+        </div>
+
+
+
+        <div class="button-area clearfix">
+            <div class="button next-button blue-button">
+                <button class="icon-next-white" type="submit" routerLink="/purchase/complete">購入完了</button>
+            </div>
+            <div class="prev-link">
+                <a class="icon-prev-black" href="/purchase/input">戻る</a>
+            </div>
+        </div>
+        <input type="hidden" name="transactionId" value="5a572ef15d2c240d54e92042">
+    </form>
+</div>
