--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -3,8 +3,6 @@
     <p class="read">必須項目を入力し「次へ」ボタンを押してください。</p>
 
     <form id="purchaseform" method="post">
-
-
         <h2 class="section-ttl">お名前（ひらがな）
             <span class="text-icon-red small-x-text">入力必須</span>
         </h2>
@@ -171,10 +169,10 @@
                 </dl>
             </li>
         </ul>
-        
+
         <div class="button-area clearfix">
             <div class="button next-button blue-button">
-                <button class="icon-next-white" type="submit">次へ</button>
+                <button class="icon-next-white" type="submit" routerLink="/purchase/confirm">次へ</button>
             </div>
             <div class="prev-link">
                 <a class="icon-prev-black" href="/purchase/ticket/">戻る</a>
