--- a/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
+++ b/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
@@ -39,13 +39,6 @@
             </label>
         </div>
 
-        <div class="button-area">
-            <div class="button next-button blue-button">
-                <button class="icon-next-white" type="submit" routerLink="/purchase/ticket">次へ</button>
-            </div>
-            <div class="prev-link">
-                <a class="icon-prev-black" routerLink="">戻る</a>
-            </div>
-        </div>
+        <app-buttons nextLabel="次へ" prevLabel="戻る" prevLink="/purchase/schedule"></app-buttons>
     </form>
 </div>
