--- a/src/client/src/app/components/purchase/purchase-complete/purchase-complete.component.html
+++ b/src/client/src/app/components/purchase/purchase-complete/purchase-complete.component.html
@@ -1,3 +1,113 @@
-<p>
-  purchase-complete works!
-</p>
+<div class="contents">
+    <h1 class="page-ttl">購入完了</h1>
+    <p class="read">ご購入ありがとうございました。
+        <br>購入者情報入力画面で入力していただいたメールアドレス宛に購入完了メールを送信しました。
+        <br>ご入場方法に関しましてはページ下部をご確認ください。
+        <br>※購入完了メールの送信に時間がかかる事がありますのでご注意ください。</p>
+
+    <ul class="box radius bg-light-gray info mb-large form-layout">
+        <li class="purchase-number">
+            <dl>
+                <dt>予約番号</dt>
+                <dd>
+                    <strong class="red-text large-x-text">161073</strong>
+                    <p class="small-x-text">※チケットの発行等に必要な番号となりますので必ず忘れないようにしてください。</p>
+                </dd>
+            </dl>
+        </li>
+        <li>
+            <dl>
+                <dt>劇場 / スクリーン</dt>
+                <dd>シネマサンシャイン池袋テスト / シネマ３</dd>
+            </dl>
+        </li>
+        <li>
+            <dl>
+                <dt>作品名</dt>
+                <dd>後妻業の女</dd>
+            </dl>
+        </li>
+        <li>
+            <dl>
+                <dt>鑑賞日時</dt>
+                <dd>
+                    2018年01月11日(木) 20:55 - 23:08
+                </dd>
+            </dl>
+        </li>
+        <li>
+            <dl>
+                <dt>座席</dt>
+                <dd>
+
+                    <p>Ｉ－１４ レイト ￥1,300</p>
+
+                </dd>
+            </dl>
+        </li>
+        <li>
+            <dl>
+                <dt>ご利用金額</dt>
+                <dd>￥1,300</dd>
+            </dl>
+        </li>
+        <li>
+            <dl>
+                <dt>メールアドレス</dt>
+                <dd>hataguchi@motionpicture.jp</dd>
+            </dl>
+        </li>
+    </ul>
+
+
+    <div class="mb-x-large">
+        <p class="mb-middle small-x-text">
+            <strong>&lt;購入完了メールが届かない場合のご確認事項&gt;</strong>
+            <br>購入完了後、購入完了メールが届かない場合は下記2点をご確認ください。
+            <br>また、購入完了メールは自動送信のため再送信は致しかねます。
+            <br>購入できているかのご確認は「予約番号」をお控えのうえ
+            <a class="inquiry-login-link" href="/inquiry/login?theater=101&amp;reserve=161073"
+                target="_blank">チケット照会ページ</a>よりご確認ください。
+            <br>・ご入力いただいたメールアドレスに不備があった場合やメールの着信を拒否されている場合は購入完了メールが受け取れない場合があります。
+            <br>・プロバイダのメール設定、携帯キャリア会社のメール設定のフィルタリング機能を有効にしている方は「削除フォルダ」または「迷惑メールフォルダ」をご確認ください。</p>
+        <div class="button dark-blue-button print-button center-button not-print">
+            <a class="icon-print-white" href="#">印刷する</a>
+        </div>
+    </div>
+
+    <div class="not-print">
+        <h2 class="page-ttl">入場方法</h2>
+
+        <ul class="entry-method">
+            <li>
+                <dl class="box radius bg-light-gray">
+                    <dt class="mb-x-small text-center">
+                        <strong>QRコードでスマート入場</strong>
+                    </dt>
+                    <dd>
+                        <p class="mb-small">当日チケット発券不要！
+                            <br>スマートフォンで入場用QRコードを提示するだけでスムーズに入場！
+                            <br>入場用QRコードの確認は下記「チケット情報確認」ボタンを押してください。</p>
+                        <div class="image mb-x-small">
+                            <img src="./assets/images/purchase/complete/qr.svg" alt="">
+                        </div>
+                        <div class="button blue-button inquiry-button mb-small center-button">
+                            <a class="icon-new-tab-white" href="/inquiry/login?theater=101&amp;reserve=161073" target="_blank">チケット情報確認</a>
+                        </div>
+                        <p>スマートフォンをお持ちでない方は当日チケット発券/入場も可能です。
+                            <br>発券方法は
+                            <a class="icon-new-tab-blue" href="/method/ticketing" target="_blank">こちら</a>
+                        </p>
+                    </dd>
+                </dl>
+            </li>
+        </ul>
+
+        <div class="button-area clearfix">
+            <div class="prev-link">
+                <a class="icon-prev-black" href="http://testssktsportal.azurewebsites.net">TOPへ戻る</a>
+            </div>
+        </div>
+    </div>
+
+</div>
