--- a/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
+++ b/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
@@ -10,7 +10,9 @@
         <span class="small-x-text">※車椅子席をご希望の方は、お手数ですが通常のお席をご購入の上、対象の劇場にご連絡ください。</span>
     </p>
 
-    <app-screen></app-screen>
+    <app-screen>
+        <app-seat-info></app-seat-info>
+    </app-screen>
 
     <div class="film-info radius mb-large">
         <p class="mb-small">現在、選択されているチケットは下記のとおりです。</p>
