--- a/src/client/src/app/components/parts/buttons/buttons.component.html
+++ b/src/client/src/app/components/parts/buttons/buttons.component.html
@@ -1,8 +1,8 @@
 <div class="button-area">
     <div class="button next-button blue-button">
-        <button class="icon-next-white" type="submit">{{ nextLabel }}</button>
+        <button type="submit"><app-icon [iconName]="'next-white'" [width]="15" [height]="15"></app-icon>{{ nextLabel }}</button>
     </div>
     <div class="prev-link">
-        <a class="icon-prev-black" routerLink="{{ prevLink }}">{{ prevLabel }}</a>
+        <a routerLink="{{ prevLink }}"><app-icon [iconName]="'prev-black'" [width]="15" [height]="15"></app-icon>{{ prevLabel }}</a>
     </div>
 </div>
