--- a/src/client/src/app/components/parts/buttons/buttons.component.scss
+++ b/src/client/src/app/components/parts/buttons/buttons.component.scss
@@ -22,6 +22,12 @@ $mobile: 767px;
         @media screen and (max-width: $mobile){
             width: 100%;
         }
+        app-icon {
+            position: absolute;
+            top: 50%;
+            right: 20px;
+            margin-top: -7.5px;
+        }
     }
 }
 .prev-button {
