--- a/src/client/src/app/components/error/error.component.html
+++ b/src/client/src/app/components/error/error.component.html
@@ -5,7 +5,7 @@
         <br>お手数をおかけいたしますが、もう一度最初から操作をお願いいたします。</p>
     <div class="button-area">
         <div class="prev-link">
-            <a class="icon-prev-black" href="{{ environment.PORTAL_SITE_URL }}">戻る</a>
+            <a href="{{ environment.PORTAL_SITE_URL }}"><app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
         </div>
     </div>
     <code *ngIf="message">{{ message }}</code>
