--- a/src/client/src/app/components/parts/screen/screen.component.scss
+++ b/src/client/src/app/components/parts/screen/screen.component.scss
@@ -129,18 +129,18 @@ $mobile: 767px;
 
 .zoom-btn {
     display: none;
+    cursor: pointer;
     position: absolute;
     top: 10px;
     right: 10px;
     z-index: 10;
-    display: block;
     width: 50px;
     height: 50px;
     color: #FFF;
     background-color: #3e3a39;
     border-radius: 3px;
     padding-top: 5px;
-    @media screen and (max-width: $mobile) {
+    &.active {
         display: block;
     }
     &.scroll {
