--- a/src/client/src/app/components/purchase/purchase-schedule/purchase-schedule.component.html
+++ b/src/client/src/app/components/purchase/purchase-schedule/purchase-schedule.component.html
@@ -3,16 +3,8 @@
     <h1 class="page-ttl">スケジュール選択</h1>
     <p class="read">こちらからチケットの購入をする事が出来ます。
         <br>ご希望の鑑賞作品、鑑賞日時を選択してください。</p>
-    <div class="mb-middle button blue-button center-button inquiry-button">
-        <a routerLink="/inquiry/login/118">シネマサンシャイン１１８照会</a>
-    </div>
-
-    <div class="mb-middle button blue-button center-button inquiry-button">
-        <a routerLink="/inquiry/login/112" target="_blank">シネマサンシャイン北島テスト照会</a>
-    </div>
-
-    <div class="mb-middle button blue-button center-button inquiry-button">
-        <a routerLink="/inquiry/login/101" target="_blank">シネマサンシャイン池袋テスト照会</a>
+    <div *ngFor="let theater of theaters" class="mb-middle button blue-button center-button inquiry-button">
+        <a routerLink="/inquiry/login/{{ theater.location.branchCode }}">{{ theater.name.ja }}照会</a>
     </div>
 
     <div class="mb-middle">
