--- a/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
+++ b/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
@@ -9,38 +9,67 @@
         </span>
         <span class="small-x-text">※車椅子席をご希望の方は、お手数ですが通常のお席をご購入の上、対象の劇場にご連絡ください。</span>
     </p>
-
-    <app-screen>
-        <app-seat-info></app-seat-info>
-    </app-screen>
+    <div class="mb-middle">
+        <app-screen (select)="seatSelect($event)" (alert)="seatSelectionAlert()">
+            <app-seat-info></app-seat-info>
+        </app-screen>
+    </div>
 
     <div class="film-info radius mb-large">
         <p class="mb-small">現在、選択されているチケットは下記のとおりです。</p>
         <dl>
             <dt>劇場 / スクリーン</dt>
             <dd class="border-bottom-dot">
-                シネマサンシャイン１１８ / ４ＤＸ
+                {{ purchase.getTheaterName() }} / {{ purchase.getScreenName() }}
             </dd>
             <dt>鑑賞日時</dt>
             <dd class="border-bottom-dot">
-                2018年01月10日(水) 12:10 - 13:56
+                {{ purchase.getAppreciationDate() }} {{ purchase.getStartDate() }} - {{ purchase.getEndDate() }}
             </dd>
             <dt>作品名</dt>
-            <dd>４ＤＸ３Ｄ作品</dd>
+            <dd>{{ purchase.getTitle() }}</dd>
         </dl>
     </div>
 
     <h2 class="section-ttl">利用規約</h2>
     <p class="mb-small">利用規約に同意した上で「次へ」ボタンを押してください。</p>
-    
-    <form method="post">
+
+    <form [formGroup]="seatForm" (ngSubmit)="onSubmit()">
         <div class="mb-x-large text-center">
-            <input type="checkbox" name="agree" value="true" id="agree">
-            <label for="agree" class="agree-label">
+            <input type="checkbox" formControlName="terms" id="terms">
+            <label for="terms" class="agree-label">
                 <strong>利用規約に同意する</strong>
             </label>
+            <div *ngIf="seatForm.controls['terms'].invalid && (seatForm.controls['terms'].dirty || seatForm.controls['terms'].touched)"
+                class="validation-text">利用規約に同意してください</div>
         </div>
 
-        <app-buttons nextLabel="次へ" prevLabel="戻る" prevLink="/purchase/schedule"></app-buttons>
+        <div class="button-area">
+            <div class="button next-button blue-button">
+                <button type="submit">
+                    <app-icon iconName="next-white" width="15" height="15"></app-icon>次へ</button>
+            </div>
+            <div class="prev-link">
+                <a href="{{ purchase.data.movieTheaterOrganization?.url }}">
+                    <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
+            </div>
+        </div>
     </form>
 </div>
+
+<app-modal [open]="notSelectSeatModal" (close)="notSelectSeatModal = false">
+    <div class="modal-ttl large-text text-center mb-middle">
+        <strong>座席が未選択です</strong>
+    </div>
+    <p class="text-center">ご希望の空席を選択して「次へ」ボタンを押してください。</p>
+</app-modal>
+
+<app-modal [open]="upperLimitModal" (close)="upperLimitModal = false">
+    <div class="modal-ttl large-text text-center mb-middle">
+        <strong>予約座席数が上限です</strong>
+    </div>
+    <p class="text-center">予約座席数は最大
+        <span class="seat-limit-text">{{ purchase.data.individualScreeningEvent?.coaInfo.availableNum }}</span>席までとなります。</p>
+</app-modal>
+
+<app-loading [show]="isLoading"></app-loading>
