--- a/src/client/src/assets/scss/_common.scss
+++ b/src/client/src/assets/scss/_common.scss
@@ -719,82 +719,44 @@ p {
     }
 }
 
-.modal-cover {
-    opacity: 0;
-    visibility: hidden;
-    background-color: rgba(0, 0, 0, 0.7);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 10;
-}
-
-.modal {
-    opacity: 0;
-    visibility: hidden;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 600px;
-    margin-left: -300px;
-    z-index: 10;
-    @media screen and (max-width: $mobile){
-        width: 88%;
-        margin-left: -44%;
-    }
-    .inner {
-        overflow: hidden;
-        border-radius: 5px;
-        >.box {
-            border-radius: 0;
-        }
-    }
-    
-    .close-button {
-        position: absolute;
-        top: -30px;
-        right: 0px;
-        a {
-            display: block;
-            width: 25px;
-            height: 25px;
-            &:before {
-                content: '';
-                position: absolute;
-                top: 50%;
-                left: 0;
-                background-image: url(./assets/images/common/modal_close.svg);
-                background-size: contain;
-                width: 100%;
-                height: 100%;
-                margin-top: -50%;
-            }
-        }
-    }
-}
-
-
-.modal.scroll {
-    .inner {
-        overflow-y: auto;
-    }
-}
-
-.modal-cover.active,
-.modal.active {
-    visibility: visible;
-    animation: fadein 0.4s both;
-}
-
-.modal-cover.disabled,
-.modal.disabled {
-    visibility: visible;
-    animation: fadeout 0.4s both;
-}
-
 .blur {
     filter: blur(5px);
 }
 
+.position-center {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+@keyframes zoom {
+    0% {
+        transform: scale(.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+
+@keyframes fadein {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+
+@keyframes fadeout {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
