--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
@@ -1,46 +1,42 @@
 <div class="contents">
-    <form method="post">
-        <h1 class="page-ttl">券種選択</h1>
-        <p class="read">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
+    <h1 class="page-ttl">券種選択</h1>
+    <p class="read">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
 
-        <ul class="box radius bg-light-gray mb-middle seats">
-            <li *ngFor="let offer of offers">
-                <dl class="d-table">
-                    <dt class="d-td seat-code">{{ offer.seatNumber }}</dt>
-                    <dd class="d-td width-medium">
-                        <div *ngIf="!offer.selected" class="button blue-button">
-                            <a (click)="ticketSelect($event, offer)">券種を選択してください</a>
-                        </div>
-                        <div *ngIf="offer.selected" class="blue-button ghost-button">
-                            <a *ngIf="!offer.glasses" (click)="ticketSelect($event, offer)">
-                                {{ offer.ticketName }} ￥{{ offer.price }}
-                            </a>
-                            <a *ngIf="offer.glasses" (click)="ticketSelect($event, offer)">
-                                {{ offer.ticketName }} メガネ込み ￥{{ offer.price + offer.addGlasses }}
-                            </a>
-                        </div>
-                    </dd>
-                </dl>
-            </li>
-        </ul>
+    <ul class="box radius bg-light-gray mb-middle seats">
+        <li *ngFor="let offer of offers">
+            <dl class="d-table">
+                <dt class="d-td seat-code">{{ offer.seatNumber }}</dt>
+                <dd class="d-td width-medium">
+                    <div *ngIf="!offer.selected" class="button blue-button">
+                        <a (click)="ticketSelect($event, offer)">券種を選択してください</a>
+                    </div>
+                    <div *ngIf="offer.selected" class="blue-button ghost-button">
+                        <a (click)="ticketSelect($event, offer)">
+                            {{ offer.ticketInfo.ticketName }} ￥{{ offer.ticketInfo.salePrice }}
+                        </a>
+                    </div>
+                </dd>
+            </dl>
+        </li>
+    </ul>
 
-        <div class="box radius bg-light-gray mb-large total">
-            <div class="text-right mb-small">
-                <div class="length mb-x-small">購入枚数
-                    <strong class="red-text large-text">{{ offers.length }}枚</strong>
-                </div>
-                <div class="price">合計金額
-                    <strong class="red-text large-text">
-                        <span>{{ totalPrice }}</span>円</strong>
-                </div>
+    <div class="box radius bg-light-gray mb-large total">
+        <div class="text-right mb-small">
+            <div class="length mb-x-small">購入枚数
+                <strong class="red-text large-text">{{ offers.length }}枚</strong>
             </div>
-            <div class="border-bottom-dot mb-small"></div>
-
-            <p class="small-x-text">※メンバーズカード提示による割引やその他割引券などのご利用はできません。
-                <br>※車椅子席をご希望の方は、お手数ですが通常のお席をご購入の上、対象の劇場にご連絡ください。
-                <br>※ムビチケ券によっては別途追加料金が発生する場合がありますのでご了承ください。</p>
+            <div class="price">合計金額
+                <strong class="red-text large-text">
+                    <span>{{ totalPrice }}</span>円</strong>
+            </div>
         </div>
+        <div class="border-bottom-dot mb-small"></div>
 
+        <p class="small-x-text">※メンバーズカード提示による割引やその他割引券などのご利用はできません。
+            <br>※車椅子席をご希望の方は、お手数ですが通常のお席をご購入の上、対象の劇場にご連絡ください。
+            <br>※ムビチケ券によっては別途追加料金が発生する場合がありますのでご了承ください。</p>
+    </div>
+    <form (ngSubmit)="onSubmit()">
         <app-buttons nextLabel="次へ" prevLabel="戻る" prevLink="/purchase/seat"></app-buttons>
     </form>
 </div>
@@ -54,8 +50,7 @@
                     <dl class="d-table">
                         <dt class="d-td">
                             <div class="mb-xx-small">
-                                <strong *ngIf="!ticket.glasses">{{ ticket.ticketName }} ￥{{ ticket.salePrice }}</strong>
-                                <strong *ngIf="ticket.glasses">{{ ticket.ticketName }} メガネ込み ￥{{ ticket.salePrice + ticket.addGlasses }}</strong>
+                                <strong>{{ ticket.ticketName }} ￥{{ ticket.salePrice }}</strong>
                             </div>
                             <p class="small-x-text">{{ ticket.ticketNote }}</p>
                         </dt>
@@ -73,5 +68,20 @@
         </div>
     </div>
 </div>
+
+<app-modal [open]="notSelectModal" (close)="notSelectModal = false">
+    <div class="modal-ttl large-text text-center mb-middle">
+        <strong>券種が未選択です</strong>
+    </div>
+    <p class="text-center">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
+</app-modal>
+
+<app-modal [open]="discountConditionsModal" (close)="discountConditionsModal = false">
+    <div class="modal-ttl large-text text-center mb-middle">
+        <strong>割引条件が満たされていません</strong>
+    </div>
+    <p class="text-center">選択した券種の中に、割引券が含まれています。<br>
+        割引券の適用条件を再度ご確認ください。</p>
+</app-modal>
 
 <app-loading [show]="isLoading"></app-loading>
