--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -2,7 +2,7 @@
     <h1 class="page-ttl">購入者情報入力</h1>
     <p class="read">必須項目を入力し「次へ」ボタンを押してください。</p>
 
-    <form id="purchaseform" method="post">
+    <form [formGroup]="inputForm" (ngSubmit)="onSubmit()">
         <h2 class="section-ttl">お名前（ひらがな）
             <span class="text-icon-red small-x-text">入力必須</span>
         </h2>
@@ -11,15 +11,19 @@
                 <dl>
                     <dt>せい</dt>
                     <dd>
-                        <input type="text" name="familyName" autocomplete="family-name" placeholder="(例)しねま" value="">
-
+                        <input type="text" formControlName="familyName" autocomplete="family-name" placeholder="(例)しねま">
+                        <div *ngIf="inputForm.controls['familyName'].invalid && (inputForm.controls['familyName'].dirty || inputForm.controls['familyName'].touched)">
+                            <div *ngIf="inputForm.controls['familyName'].errors.required" class="validation-text">せいが未入力です</div>
+                        </div>
                     </dd>
                 </dl>
                 <dl>
                     <dt>めい</dt>
                     <dd>
-                        <input type="text" name="givenName" autocomplete="given-name" placeholder="(例)たろう" value="">
-
+                        <input type="text" formControlName="givenName" autocomplete="given-name" placeholder="(例)たろう">
+                        <div *ngIf="inputForm.controls['givenName'].invalid && (inputForm.controls['givenName'].dirty || inputForm.controls['givenName'].touched)">
+                            <div *ngIf="inputForm.controls['givenName'].errors.required" class="validation-text">せいが未入力です</div>
+                        </div>
                     </dd>
                 </dl>
             </div>
@@ -30,14 +34,19 @@
         <div class="box radius bg-light-gray mb-large">
             <dl>
                 <dd>
-                    <input type="email" name="email" autocomplete="email" placeholder="(例)cinema@cinemasunshine.co.jp" value="">
+                    <input type="email" formControlName="email" autocomplete="email" placeholder="(例)cinema@cinemasunshine.co.jp">
+                    <div *ngIf="inputForm.controls['email'].invalid && (inputForm.controls['email'].dirty || inputForm.controls['email'].touched)">
+                        <div *ngIf="inputForm.controls['email'].errors.required" class="validation-text">メールアドレスが未入力です</div>
+                    </div>
                 </dd>
             </dl>
             <dl>
                 <dt>メールアドレス確認</dt>
                 <dd>
-                    <input type="email" name="emailConfirm" placeholder="(例)cinema@cinemasunshine.co.jp" value="">
-
+                    <input type="email" formControlName="emailConfirm" placeholder="(例)cinema@cinemasunshine.co.jp">
+                    <div *ngIf="inputForm.controls['emailConfirm'].invalid && (inputForm.controls['emailConfirm'].dirty || inputForm.controls['emailConfirm'].touched)">
+                        <div *ngIf="inputForm.controls['emailConfirm'].errors.required" class="validation-text">メールアドレス確認が未入力です</div>
+                    </div>
                     <p class="small-x-text">
                         <strong>【ドメイン指定受信をご利用の場合について】</strong>
                         <br>※ 携帯電話のドメイン指定受信をされている場合、「@ticket-cinemasunshine.com」を追加設定してください。
@@ -52,7 +61,10 @@
         <div class="box radius bg-light-gray mb-large">
             <dl>
                 <dd>
-                    <input type="tel" name="telephone" autocomplete="tel" placeholder="(例)08000000000" value="">
+                    <input type="tel" formControlName="telephone" autocomplete="tel" placeholder="(例)08000000000">
+                    <div *ngIf="inputForm.controls['telephone'].invalid && (inputForm.controls['telephone'].dirty || inputForm.controls['telephone'].touched)">
+                        <div *ngIf="inputForm.controls['telephone'].errors.required" class="validation-text">電話番号が未入力です</div>
+                    </div>
                     <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
                 </dd>
             </dl>
@@ -80,8 +92,10 @@
                 <dl>
                     <dt>カード番号</dt>
                     <dd>
-                        <input type="text" pattern="\d*" name="cardno" id="cardNumber" autocomplete="off" value="" maxlength="16" placeholder="(例)1234567890">
-
+                        <input type="text" pattern="\d*" formControlName="cardNumber" id="cardNumber" autocomplete="off" placeholder="(例)1234567890">
+                        <div *ngIf="inputForm.controls['cardNumber'].invalid && (inputForm.controls['cardNumber'].dirty || inputForm.controls['cardNumber'].touched)">
+                            <div *ngIf="inputForm.controls['cardNumber'].errors.required" class="validation-text">カード番号が未入力です</div>
+                        </div>
                         <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
                     </dd>
                 </dl>
@@ -91,58 +105,16 @@
                     <dt>有効期限</dt>
                     <dd>
 
-                        <select name="creditMonth" id="cardExpirationMonth">
+                        <select formControlName="cardExpirationMonth" id="cardExpirationMonth">
 
-                            <option value="01">01</option>
-
-                            <option value="02">02</option>
-
-                            <option value="03">03</option>
-
-                            <option value="04">04</option>
-
-                            <option value="05">05</option>
-
-                            <option value="06">06</option>
-
-                            <option value="07">07</option>
-
-                            <option value="08">08</option>
-
-                            <option value="09">09</option>
-
-                            <option value="10">10</option>
-
-                            <option value="11">11</option>
-
-                            <option value="12">12</option>
+                            <option *ngFor="let month of cardExpiration.month" [value]="month">{{ month }}</option>
 
                         </select> 月
-                        <select name="creditYear" id="cardExpirationYear">
+                        <select formControlName="cardExpirationYear" id="cardExpirationYear">
 
-
-                            <option value="2018">2018</option>
-
-                            <option value="2019">2019</option>
-
-                            <option value="2020">2020</option>
-
-                            <option value="2021">2021</option>
-
-                            <option value="2022">2022</option>
-
-                            <option value="2023">2023</option>
-
-                            <option value="2024">2024</option>
-
-                            <option value="2025">2025</option>
-
-                            <option value="2026">2026</option>
-
-                            <option value="2027">2027</option>
+                            <option *ngFor="let year of cardExpiration.year" [value]="year">{{ year }}</option>
 
                         </select> 年
-                        <input type="hidden" name="expire" value="">
 
                     </dd>
                 </dl>
@@ -151,10 +123,12 @@
                 <dl>
                     <dt>セキュリティーコード</dt>
                     <dd>
-                        <input type="text" pattern="\d*" name="securitycode" maxlength="4" autocomplete="off" value="" placeholder="(例)123">
-
+                        <input type="text" pattern="\d*" formControlName="securityCode" autocomplete="off" placeholder="(例)123">
+                        <div *ngIf="inputForm.controls['securityCode'].invalid && (inputForm.controls['securityCode'].dirty || inputForm.controls['securityCode'].touched)">
+                            <div *ngIf="inputForm.controls['securityCode'].errors.required" class="validation-text">セキュリティーコードが未入力です</div>
+                        </div>
                         <p>
-                            <a href="#" data-modal="securitycode">セキュリティーコードについて</a>
+                            <a>セキュリティーコードについて</a>
                         </p>
                     </dd>
                 </dl>
@@ -163,20 +137,17 @@
                 <dl>
                     <dt>カード名義人</dt>
                     <dd>
-                        <input type="text" name="holdername" autocomplete="off" value="" placeholder="(例)TARO CINEMA">
-
+                        <input type="text" formControlName="holderName" autocomplete="off" placeholder="(例)TARO CINEMA">
+                        <div *ngIf="inputForm.controls['holderName'].invalid && (inputForm.controls['holderName'].dirty || inputForm.controls['holderName'].touched)">
+                            <div *ngIf="inputForm.controls['holderName'].errors.required" class="validation-text">カード名義人が未入力です</div>
+                        </div>
                     </dd>
                 </dl>
             </li>
         </ul>
 
-        <div class="button-area clearfix">
-            <div class="button next-button blue-button">
-                <button class="icon-next-white" type="submit" routerLink="/purchase/confirm">次へ</button>
-            </div>
-            <div class="prev-link">
-                <a class="icon-prev-black" href="/purchase/ticket/">戻る</a>
-            </div>
-        </div>
+        <app-buttons nextLabel="次へ" prevLabel="戻る" prevLink="/purchase/ticket"></app-buttons>
     </form>
 </div>
+
+<app-loading [show]="isLoading"></app-loading>
