--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.scss
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.scss
@@ -60,3 +60,12 @@ $mobile: 767px;
     }
 }
 
+.validation {
+    .ghost-button {
+        a {
+            border-color: #C30D23;
+            color: #C30D23;
+            background-color: #ffe8eb;
+        } 
+    }
+}
