--- a/src/client/src/app/components/parts/modal/modal.component.html
+++ b/src/client/src/app/components/parts/modal/modal.component.html
@@ -2,13 +2,19 @@
     <div class="modal-cover"></div>
     <div class="modal position-center">
         <div class="inner">
-            <div class="box radius bg-white">
-                <div class="modal-body mb-middle">
-                    <ng-content></ng-content>
+            <div *ngIf="layout">
+                <div class="box radius bg-white">
+                    <div class="modal-body mb-middle">
+                        <ng-content></ng-content>
+                    </div>
+                    <div class="prev-link">
+                        <a (click)="close.emit()">
+                            <app-icon iconName="close-black" width="15" height="15"></app-icon>閉じる</a>
+                    </div>
                 </div>
-                <div class="prev-link">
-                    <a (click)="close.emit()"><app-icon iconName="close-black" width="15" height="15"></app-icon>閉じる</a>
-                </div>
+            </div>
+            <div *ngIf="!layout">
+                <ng-content select="[inner]"></ng-content>
             </div>
         </div>
         <div class="close-button">
