--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -11,18 +11,24 @@
                 <dl>
                     <dt>せい</dt>
                     <dd>
-                        <input type="text" formControlName="familyName" autocomplete="family-name" placeholder="(例)しねま">
-                        <div *ngIf="inputForm.controls['familyName'].invalid && (inputForm.controls['familyName'].dirty || inputForm.controls['familyName'].touched)">
+                        <input [class.validation]="inputForm.controls['familyName'].invalid && inputForm.controls['familyName'].dirty" type="text"
+                            formControlName="familyName" autocomplete="family-name" placeholder="(例)しねま">
+                        <div *ngIf="inputForm.controls['familyName'].invalid && inputForm.controls['familyName'].dirty">
                             <div *ngIf="inputForm.controls['familyName'].errors.required" class="validation-text">せいが未入力です</div>
+                            <div *ngIf="inputForm.controls['familyName'].errors.maxlength" class="validation-text">せいは{{ inputForm.controls['familyName'].errors.maxlength.requiredLength }}文字以下で入力してください</div>
+                            <div *ngIf="inputForm.controls['familyName'].errors.pattern" class="validation-text">せいは全角ひらがなで入力してください</div>
                         </div>
                     </dd>
                 </dl>
                 <dl>
                     <dt>めい</dt>
                     <dd>
-                        <input type="text" formControlName="givenName" autocomplete="given-name" placeholder="(例)たろう">
-                        <div *ngIf="inputForm.controls['givenName'].invalid && (inputForm.controls['givenName'].dirty || inputForm.controls['givenName'].touched)">
-                            <div *ngIf="inputForm.controls['givenName'].errors.required" class="validation-text">せいが未入力です</div>
+                        <input [class.validation]="inputForm.controls['givenName'].invalid && inputForm.controls['givenName'].dirty" type="text"
+                            formControlName="givenName" autocomplete="given-name" placeholder="(例)たろう">
+                        <div *ngIf="inputForm.controls['givenName'].invalid && inputForm.controls['givenName'].dirty">
+                            <div *ngIf="inputForm.controls['givenName'].errors.required" class="validation-text">めいが未入力です</div>
+                            <div *ngIf="inputForm.controls['givenName'].errors.maxlength" class="validation-text">めいは{{ inputForm.controls['givenName'].errors.maxlength.requiredLength }}文字以下で入力してください</div>
+                            <div *ngIf="inputForm.controls['givenName'].errors.pattern" class="validation-text">めいは全角ひらがなで入力してください</div>
                         </div>
                     </dd>
                 </dl>
@@ -34,18 +40,25 @@
         <div class="box radius bg-light-gray mb-large">
             <dl>
                 <dd>
-                    <input type="email" formControlName="email" autocomplete="email" placeholder="(例)cinema@cinemasunshine.co.jp">
-                    <div *ngIf="inputForm.controls['email'].invalid && (inputForm.controls['email'].dirty || inputForm.controls['email'].touched)">
+                    <input [class.validation]="inputForm.controls['email'].invalid && inputForm.controls['email'].dirty" type="email" formControlName="email"
+                        autocomplete="email" placeholder="(例)cinema@cinemasunshine.co.jp">
+                    <div *ngIf="inputForm.controls['email'].invalid && inputForm.controls['email'].dirty">
                         <div *ngIf="inputForm.controls['email'].errors.required" class="validation-text">メールアドレスが未入力です</div>
+                        <div *ngIf="inputForm.controls['email'].errors.maxlength" class="validation-text">メールアドレスは{{ inputForm.controls['email'].errors.maxlength.requiredLength }}文字以下で入力してください</div>
+                        <div *ngIf="inputForm.controls['email'].errors.email" class="validation-text">メールアドレスが正しくありません</div>
                     </div>
                 </dd>
             </dl>
             <dl>
                 <dt>メールアドレス確認</dt>
                 <dd>
-                    <input type="email" formControlName="emailConfirm" placeholder="(例)cinema@cinemasunshine.co.jp">
-                    <div *ngIf="inputForm.controls['emailConfirm'].invalid && (inputForm.controls['emailConfirm'].dirty || inputForm.controls['emailConfirm'].touched)">
+                    <input [class.validation]="inputForm.controls['emailConfirm'].invalid && inputForm.controls['emailConfirm'].dirty" type="email"
+                        formControlName="emailConfirm" placeholder="(例)cinema@cinemasunshine.co.jp">
+                    <div *ngIf="inputForm.controls['emailConfirm'].invalid && inputForm.controls['emailConfirm'].dirty">
                         <div *ngIf="inputForm.controls['emailConfirm'].errors.required" class="validation-text">メールアドレス確認が未入力です</div>
+                        <div *ngIf="inputForm.controls['emailConfirm'].errors.maxlength" class="validation-text">メールアドレス確認は{{ inputForm.controls['emailConfirm'].errors.maxlength.requiredLength }}文字以下で入力してください</div>
+                        <div *ngIf="inputForm.controls['emailConfirm'].errors.email" class="validation-text">メールアドレス確認が正しくありません</div>
+                        <div *ngIf="inputForm.controls['emailConfirm'].errors.equals" class="validation-text">メールアドレス確認が一致しません</div>
                     </div>
                     <p class="small-x-text">
                         <strong>【ドメイン指定受信をご利用の場合について】</strong>
@@ -61,93 +74,129 @@
         <div class="box radius bg-light-gray mb-large">
             <dl>
                 <dd>
-                    <input type="tel" formControlName="telephone" autocomplete="tel" placeholder="(例)08000000000">
-                    <div *ngIf="inputForm.controls['telephone'].invalid && (inputForm.controls['telephone'].dirty || inputForm.controls['telephone'].touched)">
+                    <input [class.validation]="inputForm.controls['telephone'].invalid && inputForm.controls['telephone'].dirty" type="tel" formControlName="telephone"
+                        autocomplete="tel" placeholder="(例)08000000000">
+                    <div *ngIf="inputForm.controls['telephone'].invalid && inputForm.controls['telephone'].dirty">
                         <div *ngIf="inputForm.controls['telephone'].errors.required" class="validation-text">電話番号が未入力です</div>
+                        <div *ngIf="inputForm.controls['telephone'].errors.minlength" class="validation-text">電話番号は{{ inputForm.controls['telephone'].errors.minlength.requiredLength }}文字以上で入力してください</div>
+                        <div *ngIf="inputForm.controls['telephone'].errors.maxlength" class="validation-text">電話番号は{{ inputForm.controls['telephone'].errors.maxlength.requiredLength }}文字以下で入力してください</div>
+                        <div *ngIf="inputForm.controls['telephone'].errors.pattern" class="validation-text">電話番号が正しくありません</div>
                     </div>
                     <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
                 </dd>
             </dl>
         </div>
 
-        <h2 class="section-ttl">
-            お支払情報
-            <span class="text-icon-red small-x-text">入力必須</span>
-            <span class="image credit-image">
-                <img src="./assets/images/common/credit_card.png" alt="">
-            </span>
-        </h2>
+        <div *ngIf="purchase.getTotalPrice() > 0">
+            <h2 class="section-ttl">
+                お支払情報
+                <span class="text-icon-red small-x-text">入力必須</span>
+                <span class="image credit-image">
+                    <img src="./assets/images/common/credit_card.png" alt="">
+                </span>
+            </h2>
 
-        <p class="mb-small">クレジットカード決済の必要事項を入力ください。</p>
-        <ul class="box radius bg-light-gray mb-large credit form-layout">
-            <li class="price">
-                <dl>
-                    <dt>ご利用金額</dt>
-                    <dd class="large-text red-text">
-                        <strong>￥1,400</strong>
-                    </dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dt>カード番号</dt>
-                    <dd>
-                        <input type="text" pattern="\d*" formControlName="cardNumber" id="cardNumber" autocomplete="off" placeholder="(例)1234567890">
-                        <div *ngIf="inputForm.controls['cardNumber'].invalid && (inputForm.controls['cardNumber'].dirty || inputForm.controls['cardNumber'].touched)">
-                            <div *ngIf="inputForm.controls['cardNumber'].errors.required" class="validation-text">カード番号が未入力です</div>
-                        </div>
-                        <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
-                    </dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dt>有効期限</dt>
-                    <dd>
+            <p class="mb-small">クレジットカード決済の必要事項を入力ください。</p>
+            <ul class="box radius bg-light-gray mb-large credit form-layout">
+                <li class="price">
+                    <dl>
+                        <dt>ご利用金額</dt>
+                        <dd class="large-text red-text">
+                            <strong>￥1,400</strong>
+                        </dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>カード番号</dt>
+                        <dd>
+                            <input [class.validation]="inputForm.controls['cardNumber'].invalid && inputForm.controls['cardNumber'].dirty" type="text"
+                                pattern="\d*" formControlName="cardNumber" id="cardNumber" autocomplete="off" placeholder="(例)1234567890">
+                            <div *ngIf="inputForm.controls['cardNumber'].invalid && inputForm.controls['cardNumber'].dirty">
+                                <div *ngIf="inputForm.controls['cardNumber'].errors.required" class="validation-text">カード番号が未入力です</div>
+                            </div>
+                            <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
+                        </dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>有効期限</dt>
+                        <dd>
 
-                        <select formControlName="cardExpirationMonth" id="cardExpirationMonth">
+                            <select formControlName="cardExpirationMonth" id="cardExpirationMonth">
 
-                            <option *ngFor="let month of cardExpiration.month" [value]="month">{{ month }}</option>
+                                <option *ngFor="let month of cardExpiration.month" [value]="month">{{ month }}</option>
 
-                        </select> 月
-                        <select formControlName="cardExpirationYear" id="cardExpirationYear">
+                            </select> 月
+                            <select formControlName="cardExpirationYear" id="cardExpirationYear">
 
-                            <option *ngFor="let year of cardExpiration.year" [value]="year">{{ year }}</option>
+                                <option *ngFor="let year of cardExpiration.year" [value]="year">{{ year }}</option>
 
-                        </select> 年
+                            </select> 年
 
-                    </dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dt>セキュリティーコード</dt>
-                    <dd>
-                        <input type="text" pattern="\d*" formControlName="securityCode" autocomplete="off" placeholder="(例)123">
-                        <div *ngIf="inputForm.controls['securityCode'].invalid && (inputForm.controls['securityCode'].dirty || inputForm.controls['securityCode'].touched)">
-                            <div *ngIf="inputForm.controls['securityCode'].errors.required" class="validation-text">セキュリティーコードが未入力です</div>
-                        </div>
-                        <p>
-                            <a>セキュリティーコードについて</a>
-                        </p>
-                    </dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dt>カード名義人</dt>
-                    <dd>
-                        <input type="text" formControlName="holderName" autocomplete="off" placeholder="(例)TARO CINEMA">
-                        <div *ngIf="inputForm.controls['holderName'].invalid && (inputForm.controls['holderName'].dirty || inputForm.controls['holderName'].touched)">
-                            <div *ngIf="inputForm.controls['holderName'].errors.required" class="validation-text">カード名義人が未入力です</div>
-                        </div>
-                    </dd>
-                </dl>
-            </li>
-        </ul>
+                        </dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>セキュリティーコード</dt>
+                        <dd>
+                            <input [class.validation]="inputForm.controls['securityCode'].invalid && inputForm.controls['securityCode'].dirty" type="text"
+                                pattern="\d*" formControlName="securityCode" autocomplete="off" placeholder="(例)123">
+                            <div *ngIf="inputForm.controls['securityCode'].invalid && inputForm.controls['securityCode'].dirty">
+                                <div *ngIf="inputForm.controls['securityCode'].errors.required" class="validation-text">セキュリティーコードが未入力です</div>
+                            </div>
+                            <p>
+                                <a (click)="securityCodeModal = true">セキュリティーコードについて</a>
+                            </p>
+                        </dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt>カード名義人</dt>
+                        <dd>
+                            <input [class.validation]="inputForm.controls['holderName'].invalid && inputForm.controls['holderName'].dirty" type="text"
+                                formControlName="holderName" autocomplete="off" placeholder="(例)TARO CINEMA">
+                            <div *ngIf="inputForm.controls['holderName'].invalid && inputForm.controls['holderName'].dirty">
+                                <div *ngIf="inputForm.controls['holderName'].errors.required" class="validation-text">カード名義人が未入力です</div>
+                            </div>
+                        </dd>
+                    </dl>
+                </li>
+            </ul>
+        </div>
 
         <app-buttons nextLabel="次へ" prevLabel="戻る" prevLink="/purchase/ticket"></app-buttons>
     </form>
 </div>
 
 <app-loading [show]="isLoading"></app-loading>
+
+<app-modal class="security-code-modal" [open]="securityCodeModal" [layout]="false" (close)="securityCodeModal = false">
+    <div inner class="box radius bg-white">
+        <div class="modal-ttl mb-xx-small text-center">セキュリティーコードについて</div>
+        <p class="mb-middle small-x-text text-center">※カード会社により表示箇所および名称が異なります。</p>
+        <div class="box radius bg-light-gray">
+            <dl class="mb-middle">
+                <dt>
+                    <strong>VISA / MASTER / DINERS / JCBの場合</strong>
+                </dt>
+                <dd>【カード裏面】セキュリティーコード(末尾3桁)</dd>
+                <dd>
+                    <img src="./assets/images/common/credit_back.svg" alt="">
+                </dd>
+            </dl>
+            <dl>
+                <dt>
+                    <strong>AMEXの場合</strong>
+                </dt>
+                <dd>【カード表面】セキュリティーコード(4桁)</dd>
+                <dd>
+                    <img src="./assets/images/common/credit_front.svg" alt="">
+                </dd>
+            </dl>
+        </div>
+    </div>
+</app-modal>
