--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
@@ -41,47 +41,40 @@
     </form>
 </div>
 
-<div class="parent" [class.active]="ticketsModal">
-    <div class="modal-cover"></div>
-    <div class="modal position-center">
-        <div class="inner">
-            <ul class="box radius bg-light-gray">
-                <li *ngFor="let ticket of purchase.data.salesTickets">
-                    <dl class="d-table">
-                        <dt class="d-td">
-                            <div class="mb-xx-small">
-                                <strong>{{ ticket.ticketName }} ￥{{ ticket.salePrice }}</strong>
-                            </div>
-                            <p class="small-x-text">{{ ticket.ticketNote }}</p>
-                        </dt>
-                        <dd class="d-td width-small">
-                            <div class="button blue-button ticket-type-select">
-                                <a (click)="selectSalseTicket($event, ticket)">選択</a>
-                            </div>
-                        </dd>
-                    </dl>
-                </li>
-            </ul>
-        </div>
-        <div class="close-button">
-            <a class="modal-close" (click)="ticketsModal = false"></a>
-        </div>
-    </div>
-</div>
+<app-modal [open]="ticketsModal" [layout]="false" (close)="ticketsModal = false">
+    <ul inner class="not-layout box radius bg-light-gray">
+        <li *ngFor="let ticket of purchase.data.salesTickets">
+            <dl class="d-table">
+                <dt class="d-td">
+                    <div class="mb-xx-small">
+                        <strong>{{ ticket.ticketName }} ￥{{ ticket.salePrice }}</strong>
+                    </div>
+                    <p class="small-x-text">{{ ticket.ticketNote }}</p>
+                </dt>
+                <dd class="d-td width-small">
+                    <div class="button blue-button ticket-type-select">
+                        <a (click)="selectSalseTicket($event, ticket)">選択</a>
+                    </div>
+                </dd>
+            </dl>
+        </li>
+    </ul>
+</app-modal>
 
-<app-modal [open]="notSelectModal" (close)="notSelectModal = false">
+<app-modal [open]="notSelectModal" [layout]="true" (close)="notSelectModal = false">
     <div class="modal-ttl large-text text-center mb-middle">
         <strong>券種が未選択です</strong>
     </div>
     <p class="text-center">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
 </app-modal>
 
-<app-modal [open]="discountConditionsModal" (close)="discountConditionsModal = false">
+<app-modal [open]="discountConditionsModal" [layout]="true" (close)="discountConditionsModal = false">
     <div class="modal-ttl large-text text-center mb-middle">
         <strong>割引条件が満たされていません</strong>
     </div>
-    <p class="text-center">選択した券種の中に、割引券が含まれています。<br>
-        割引券の適用条件を再度ご確認ください。</p>
+    <p class="text-center">選択した券種の中に、割引券が含まれています。
+        <br> 割引券の適用条件を再度ご確認ください。
+    </p>
 </app-modal>
 
 <app-loading [show]="isLoading"></app-loading>
