--- a/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
@@ -4,14 +4,12 @@
         <strong class="large-text red-text">まだ購入は完了していません。</strong>
         <br>ご購入内容をご確認頂き「購入完了」ボタンを押して購入を確定してください。</p>
 
-    <form class="form-layout" method="post">
+    <div class="form-layout">
         <h2 class="section-ttl">
             作品情報
             <div class="right">
                 <div class="button light-gray-button change-button">
-
-                    <a href="http://testssktsportal.azurewebsites.net/theater/aira/">変更</a>
-
+                    <a href="{{ purchase.data.movieTheaterOrganization?.url }}">変更</a>
                 </div>
             </div>
         </h2>
@@ -19,13 +17,13 @@
             <li>
                 <dl>
                     <dt>劇場 / スクリーン</dt>
-                    <dd>シネマサンシャイン１１８ / シアター７</dd>
+                    <dd>{{ purchase.getTheaterName() }} / {{ purchase.getScreenName() }}</dd>
                 </dl>
             </li>
             <li>
                 <dl>
                     <dt>作品名</dt>
-                    <dd>後妻業の女</dd>
+                    <dd>{{ purchase.getTitle() }}</dd>
                 </dl>
             </li>
             <li>
@@ -34,7 +32,7 @@
                     <dd>
                         <div class="mb-xx-small">
                             <strong class="red-text">
-                                2018年01月11日(木) 20:15 - 22:28
+                                {{ purchase.getAppreciationDate() }} {{ purchase.getStartDate() }} - {{ purchase.getEndDate() }}
                             </strong>
                         </div>
                         <p class="small-x-text red-text">※鑑賞日時を必ずご確認ください。</p>
@@ -44,20 +42,8 @@
             <li>
                 <dl>
                     <dt>座席</dt>
-                    <dd>
-
-                        <p>Ｂ－３ レイト ￥1,300</p>
-
-                        <div style="display: none" class="right">
-                            <div class="button dark-blue-button confirm-button">
-                                <a href="#">確認</a>
-                            </div>
-                            <!--
-                          -->
-                            <div class="button light-gray-button change-button">
-                                <a href="/purchase/seat/11816250020180111702015/">変更</a>
-                            </div>
-                        </div>
+                    <dd *ngFor="let offer of purchase.data.seatReservationAuthorization?.object.offers">
+                        <p>{{ offer.ticketInfo.ticketName }} ￥{{ offer.ticketInfo.salePrice }}</p>
                     </dd>
                 </dl>
             </li>
@@ -75,26 +61,26 @@
             <li>
                 <dl>
                     <dt>お名前（ひらがな）</dt>
-                    <dd>てすと てすと</dd>
+                    <dd>{{ purchase.data.customerContact?.familyName }} {{ purchase.data.customerContact?.givenName }}</dd>
                 </dl>
             </li>
             <li>
                 <dl>
                     <dt>メールアドレス</dt>
-                    <dd>hataguchi@motionpicture.jp</dd>
+                    <dd>{{ purchase.data.customerContact?.email }}</dd>
                 </dl>
             </li>
             <li>
                 <dl>
                     <dt>電話番号</dt>
-                    <dd>0362778824</dd>
+                    <dd>{{ purchase.data.customerContact?.telephone }}</dd>
                 </dl>
             </li>
 
-            <li>
+            <li *ngIf="purchase.getTotalPrice() > 0">
                 <dl>
                     <dt>カード番号</dt>
-                    <dd>411111*******111</dd>
+                    <dd>{{ purchase.data.gmoTokenObject?.maskedCardNo }}</dd>
                 </dl>
             </li>
 
@@ -105,25 +91,16 @@
         <div class="box radius bg-ultra-light-gray small-x-text notes mb-middle">
             
         </div>
-
-        <div class="mb-x-large text-center">
-            <input type="checkbox" name="notesAgree" value="true" id="notesAgree">
-            <label for="notesAgree" class="notes_agree-label">
-                <strong>上記内容に同意する</strong>
-            </label>
-
-        </div>
-
-
-
-        <div class="button-area clearfix">
-            <div class="button next-button blue-button">
-                <button class="icon-next-white" type="submit" routerLink="/purchase/complete">購入完了</button>
+        <form [formGroup]="confirmForm" (ngSubmit)="onSubmit()">
+            <div class="mb-x-large text-center">
+                <input type="checkbox" formControlName="notes" id="notes">
+                <label for="notes">
+                    <strong>上記内容に同意する</strong>
+                </label>
+                <div *ngIf="confirmForm.controls['notes'].invalid && (confirmForm.controls['notes'].dirty || confirmForm.controls['notes'].touched)"
+                    class="validation-text">利用規約に同意してください</div>
             </div>
-            <div class="prev-link">
-                <a class="icon-prev-black" href="/purchase/input">戻る</a>
-            </div>
-        </div>
-        <input type="hidden" name="transactionId" value="5a572ef15d2c240d54e92042">
-    </form>
+            <app-buttons nextLabel="購入完了" prevLabel="戻る" prevLink="/purchase/input"></app-buttons>
+        </form>
+    </div>
 </div>
