SSKTS-801 バリデーション設定

--- a/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
@@ -73,7 +73,7 @@
             <li>
                 <dl>
                     <dt>電話番号</dt>
-                    <dd>{{ purchase.data.customerContact?.telephone }}</dd>
+                    <dd>{{ (purchase.data.customerContact?.telephone | libphonenumberFormat) }}</dd>
                 </dl>
             </li>
 
