--- a/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
@@ -103,4 +103,5 @@
             <app-buttons nextLabel="購入完了" prevLabel="戻る" prevLink="/purchase/input"></app-buttons>
         </form>
     </div>
+    <app-site-seal></app-site-seal>
 </div>
