--- a/src/client/src/app/components/parts/buttons/buttons.component.html
+++ b/src/client/src/app/components/parts/buttons/buttons.component.html
@@ -1,7 +1,5 @@
 <div class="button-area">
-    <div class="button next-button blue-button">
-        <button type="submit"><app-icon iconName="next-white" width="15" height="15"></app-icon>{{ nextLabel }}</button>
-    </div>
+    <app-next-button>{{ nextLabel }}</app-next-button>
     <div class="prev-link">
         <a routerLink="{{ prevLink }}"><app-icon iconName="prev-black" width="15" height="15"></app-icon>{{ prevLabel }}</a>
     </div>
