--- a/src/client/src/app/components/parts/modal/modal.component.html
+++ b/src/client/src/app/components/parts/modal/modal.component.html
@@ -1,5 +1,5 @@
 <div class="parent" [class.active]="open">
-    <div class="modal-cover"></div>
+    <div class="modal-cover" (click)="close.emit()"></div>
     <div class="modal position-center">
         <div class="inner">
             <div *ngIf="layout">
