--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -171,6 +171,7 @@
 
         <app-buttons nextLabel="次へ" prevLabel="戻る" prevLink="/purchase/ticket"></app-buttons>
     </form>
+    <app-site-seal></app-site-seal>
 </div>
 
 <app-loading [show]="isLoading"></app-loading>
