--- a/src/client/src/app/components/purchase/purchase-mvtk-confirm/purchase-mvtk-confirm.component.html
+++ b/src/client/src/app/components/purchase/purchase-mvtk-confirm/purchase-mvtk-confirm.component.html
@@ -1,3 +1,27 @@
-<p>
-  purchase-mvtk-confirm works!
-</p>
+<div class="contents">
+    <h1 class="page-ttl">ムビチケ券適用内容確認</h1>
+    <p class="read">内容に問題なければ「券種選択へ戻る」ボタンを押してください。
+        <br>
+        <span class="small-text">※券種選択よりムビチケ券を選択してください。</span>
+    </p>
+    <ul class="box radius bg-light-gray mb-middle mvtk-lists">
+
+        <li>
+            <dl class="d-table">
+                <dt class="d-td">ムビチケ購入番号 8481363848</dt>
+                <dd class="d-td width-medium">
+                    <p>
+                        <strong>ﾑﾋﾞﾁｹ一般 × 10</strong>
+                    </p>
+                </dd>
+            </dl>
+        </li>
+
+    </ul>
+
+
+    <form (ngSubmit)="onSubmit()">
+        <app-buttons nextLabel="券種選択へ戻る" prevLabel="戻る" prevLink="purchase/mvtk/input"></app-buttons>
+    </form>
+    <app-site-seal></app-site-seal>
+</div>
