--- a/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
+++ b/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
@@ -10,7 +10,7 @@
         <span class="small-x-text">※車椅子席をご希望の方は、お手数ですが通常のお席をご購入の上、対象の劇場にご連絡ください。</span>
     </p>
     <div class="mb-middle">
-        <app-screen (select)="seatSelect($event)" (alert)="seatSelectionAlert()">
+        <app-screen (select)="seatSelect($event)" (alert)="seatSelectionAlert()" (load)="loadScreen($event)">
             <app-seat-info type="{{ purchase.data.individualScreeningEvent?.superEvent.coaInfo.kbnJoueihousiki?.kubunCode }}"></app-seat-info>
         </app-screen>
     </div>
@@ -55,6 +55,7 @@
             </div>
         </div>
     </form>
+    <app-site-seal></app-site-seal>
 </div>
 
 <app-modal [open]="notSelectSeatModal" [layout]="true" (close)="notSelectSeatModal = false">
