--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.scss
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.scss
@@ -10,3 +10,35 @@ $mobile: 767px;
         } 
     }
 }
+
+.mvtk {
+    dt {
+        @media screen and (max-width: $mobile){
+            display: block;
+        }
+    }
+    dd {
+        @media screen and (max-width: $mobile){
+            display: block;
+            width: 100%;
+        }
+    }
+    .mvtk-button {
+        label, a {
+            border: 1px solid #d82918;
+            background-color: #FFF;
+            color: #333;
+            &:before {
+                left: 15px;
+            }
+            &:after {
+                left: 15px;
+            }
+        }
+        img {
+            width: 100px;
+            height: 22px;
+            vertical-align: bottom;
+        }
+    }
+}
