--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
@@ -2,7 +2,7 @@
     <h1 class="page-ttl">券種選択</h1>
     <p class="read">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
 
-    <div *ngIf="purchase.isUsedMvtk()" class="box radius bg-ultra-light-gray mb-middle mvtk">
+    <div *ngIf="purchase.isUsedMvtk() && purchase.data.mvtkTickets.length === 0" class="box radius bg-ultra-light-gray mb-middle mvtk">
         <dl class="d-table">
             <dt class="d-td">ムビチケ券を利用される方</dt>
             <dd class="d-td width-medium">
@@ -57,7 +57,24 @@
 
 <app-modal [open]="ticketsModal" [layout]="false" (close)="ticketsModal = false">
     <ul inner class="not-layout box radius bg-light-gray">
-        <li *ngFor="let ticket of purchase.data.salesTickets">
+        <li *ngFor="let mvtkTicket of salesMvtkTickets" [class.disabled]="mvtkTicket.selected">
+            <dl class="d-table">
+                <dt class="d-td">
+                    <div class="mb-xx-small">
+                        <strong>
+                            {{ mvtkTicket.ticketName }} ￥{{ mvtkTicket.salePrice }}
+                        </strong>
+                    </div>
+                    <p class="small-x-text">ムビチケ購入番号 {{ mvtkTicket.knyknrNoInfo.knyknrNo }}</p>
+                </dt>
+                <dd class="d-td width-small">
+                    <div class="button blue-button ticket-type-select">
+                        <a (click)="selectMvtkTicket(mvtkTicket)">選択</a>
+                    </div>
+                </dd>
+            </dl>
+        </li>
+        <li *ngFor="let ticket of salesTickets">
             <dl class="d-table">
                 <dt class="d-td">
                     <div class="mb-xx-small">
@@ -67,7 +84,7 @@
                 </dt>
                 <dd class="d-td width-small">
                     <div class="button blue-button ticket-type-select">
-                        <a (click)="selectSalseTicket($event, ticket)">選択</a>
+                        <a (click)="selectSalseTicket(ticket)">選択</a>
                     </div>
                 </dd>
             </dl>
