--- a/src/client/src/app/components/error/error.component.html
+++ b/src/client/src/app/components/error/error.component.html
@@ -1,13 +1,12 @@
-<app-header></app-header>
 <div class="contents">
     <h1 class="page-ttl">エラーが発生しました</h1>
     <p class="read">お手続きの途中でエラーが発生いたしました。
         <br>お手数をおかけいたしますが、もう一度最初から操作をお願いいたします。</p>
     <div class="button-area">
         <div class="prev-link">
-            <a href="{{ environment.PORTAL_SITE_URL }}"><app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
+            <a href="{{ environment.PORTAL_SITE_URL }}">
+                <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
         </div>
     </div>
     <code *ngIf="message">{{ message }}</code>
 </div>
-<app-footer></app-footer>
