--- a/src/client/src/app/components/parts/header/header.component.html
+++ b/src/client/src/app/components/parts/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="inner">
         <div class="logo">
             <a href="{{ environment.PORTAL_SITE_URL }}">
-                <img src="./assets/images/common/logo.svg" alt="">
+                <img src="/assets/images/common/logo.svg" alt="">
             </a>
         </div>
         <ng-content></ng-content>
