--- a/src/client/src/app/components/purchase/purchase-complete/purchase-complete.component.html
+++ b/src/client/src/app/components/purchase/purchase-complete/purchase-complete.component.html
@@ -89,7 +89,7 @@
                             <br>スマートフォンで入場用QRコードを提示するだけでスムーズに入場！
                             <br>入場用QRコードの確認は下記「チケット情報確認」ボタンを押してください。</p>
                         <div class="image mb-x-small">
-                            <img src="./assets/images/purchase/complete/qr.svg" alt="">
+                            <img src="/assets/images/purchase/complete/qr.svg" alt="">
                         </div>
                         <div class="button blue-button inquiry-button mb-small center-button">
                             <a class="icon-new-tab-white" href="/inquiry/login?theater=101&amp;reserve=161073" target="_blank">チケット情報確認</a>
