--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
@@ -8,7 +8,7 @@
             <dd class="d-td width-medium">
                 <div class="ghost-button mvtk-button">
                     <a routerLink="/purchase/mvtk/input">
-                        <img src="./assets/images/common/mvtk_logo.svg" alt="ムビチケ">を利用する
+                        <img src="/assets/images/common/mvtk_logo.svg" alt="ムビチケ">を利用する
                     </a>
                 </div>
             </dd>
