--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -93,7 +93,7 @@
                 お支払情報
                 <span class="text-icon-red small-x-text">入力必須</span>
                 <span class="image credit-image">
-                    <img src="./assets/images/common/credit_card.png" alt="">
+                    <img src="/assets/images/common/credit_card.png" alt="">
                 </span>
             </h2>
 
@@ -187,7 +187,7 @@
                 </dt>
                 <dd>【カード裏面】セキュリティーコード(末尾3桁)</dd>
                 <dd>
-                    <img src="./assets/images/common/credit_back.svg" alt="">
+                    <img src="/assets/images/common/credit_back.svg" alt="">
                 </dd>
             </dl>
             <dl>
@@ -196,7 +196,7 @@
                 </dt>
                 <dd>【カード表面】セキュリティーコード(4桁)</dd>
                 <dd>
-                    <img src="./assets/images/common/credit_front.svg" alt="">
+                    <img src="/assets/images/common/credit_front.svg" alt="">
                 </dd>
             </dl>
         </div>
