--- a/src/client/src/assets/scss/_common.scss
+++ b/src/client/src/assets/scss/_common.scss
@@ -124,7 +124,7 @@ select {
     border-radius: 3px;
     position: relative;
     background-color: #FFF;
-    background-image: url(./assets/images/common/select_box.svg);
+    background-image: url(/assets/images/common/select_box.svg);
     background-repeat: no-repeat;
     background-size: 44px;
     background-position: right center;
@@ -138,7 +138,7 @@ select {
 /*　IE11,IE10　*/
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     select:not(:target) {
-        background-image: url(./assets/images/common/select_box.png);
+        background-image: url(/assets/images/common/select_box.png);
     }
     select::-ms-expand {
         display: none;
@@ -184,7 +184,7 @@ label {
         top: 50%;
         left: 0;
         margin-top: -10px;
-        background-image: url(./assets/images/icon/icon_check.svg);
+        background-image: url(/assets/images/icon/icon_check.svg);
         background-size: 20px 20px;
         
     }
@@ -379,7 +379,7 @@ p {
         left: 0;
         width: 100%;
         height: 3px;
-        background-image: url(./assets/images/common/line_dotte.png);
+        background-image: url(/assets/images/common/line_dotte.png);
         background-size: contain;
     }
 }
@@ -428,7 +428,7 @@ p {
             left: 0;
             width: 100%;
             height: 3px;
-            background-image: url(./assets/images/common/line_dotte.png);
+            background-image: url(/assets/images/common/line_dotte.png);
             background-size: contain;
         }
         &:last-child {
