--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.scss
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.scss
@@ -3,7 +3,7 @@ $mobile: 767px;
 
 .validation {
     .ghost-button {
-        a {
+        button {
             border-color: #C30D23;
             color: #C30D23;
             background-color: #ffe8eb;
