--- a/src/client/src/app/components/purchase/purchase-mvtk-input/purchase-mvtk-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-mvtk-input/purchase-mvtk-input.component.html
@@ -15,7 +15,7 @@
                             <dt>ムビチケ購入番号</dt>
                             <dd>
                                 <input [class.validation]="mvtkForm.controls['code'].invalid && mvtkForm.controls['code'].dirty" type="text" formControlName="code"
-                                    placeholder="(例)012345789" maxlength="10">
+                                    autocomplete="off" placeholder="(例)012345789" maxlength="10">
                                 <div *ngIf="mvtkForm.controls['code'].invalid && mvtkForm.controls['code'].dirty">
                                     <div *ngIf="mvtkForm.controls['code'].errors.required" class="validation-text">ムビチケ購入番号が未入力です</div>
                                     <div *ngIf="mvtkForm.controls['code'].errors.maxlength" class="validation-text">ムビチケ購入番号は{{ mvtkForm.controls['code'].errors.maxlength.requiredLength }}文字で入力してください</div>
