--- a/src/client/src/app/components/purchase/purchase-schedule/purchase-schedule.component.html
+++ b/src/client/src/app/components/purchase/purchase-schedule/purchase-schedule.component.html
@@ -4,7 +4,7 @@
     <p class="read">こちらからチケットの購入をする事が出来ます。
         <br>ご希望の鑑賞作品、鑑賞日時を選択してください。</p>
     <div *ngFor="let theater of theaters" class="mb-middle button blue-button center-button inquiry-button">
-        <a routerLink="/inquiry/login/{{ theater.location.branchCode }}">{{ theater.name.ja }}照会</a>
+        <a href="{{ environment.API_ENDPOINT }}/inquiry/login?theater={{ theater.location.branchCode }}">{{ theater.name.ja }}照会</a>
     </div>
 
     <div class="mb-middle">
